# carro-autonomo

./: README.md  autonomous_car.drawio  diagramas-carro-autonomo.drawio  vercel.json
autonomous_car/: .gitignore  CMakeLists.txt  README.md  build.sh  setup.sh  start.sh
autonomous_car/config/: default_config.json
autonomous_car/include/commands/: CommandProcessor.cpp  CommandProcessor.h
autonomous_car/include/commands/handlers/: AccelerateCommandHandler.cpp  AccelerateCommandHandler.h  AlertCommandHandler.cpp  AlertCommandHandler.h  BrakeCommandHandler.cpp  BrakeCommandHandler.h  TurnCommandHandler.cpp  (+1 more)
autonomous_car/include/config/: VehicleConfig.h
autonomous_car/include/managers/: WebSocketManager.cpp  WebSocketManager.h
autonomous_car/include/model-parameters/: model_metadata.h  model_variables.h
autonomous_car/include/tflite-model/: tflite_learn_3_compiled.cpp  tflite_learn_3_compiled.h
autonomous_car/include/video/: VideoStreamHandler.cpp  VideoStreamHandler.h
autonomous_car/src/: main.cpp
autonomous_car/src/config/: VehicleConfig.cpp
autonomous_car_v2/: CMakeLists.txt  README.md  build.sh  start.sh
autonomous_car_v2/include/config/: VehicleConfig.h
autonomous_car_v2/include/managers/: WebSocketManager.cpp  WebSocketManager.h
autonomous_car_v2/include/video/: VideoStreamHandler.cpp  VideoStreamHandler.h
autonomous_car_v2/src/: main.cpp
autonomous_car_v3/: .env  .gitignore  CMakeLists.txt  README.md  build.sh  start.sh
autonomous_car_v3/config/: autonomous_car.env  road_segmentation.env  traffic_sign.env  traffic_sign_detection.env  vision.env
autonomous_car_v3/docs/: pid_control.md  runtime_operation.md
autonomous_car_v3/include/commands/: BackwardCommand.hpp  StopCommand.hpp  TurnLeftCommand.hpp
autonomous_car_v3/include/services/: WebSocketServer.hpp
autonomous_car_v3/src/: main.cpp  vision_debug_main.cpp
autonomous_car_v3/src/commands/: BackwardCommand.cpp  CenterSteeringCommand.cpp  CenterSteeringCommand.hpp  Command.hpp  ForwardCommand.cpp  ForwardCommand.hpp  StopCommand.cpp  TurnLeftCommand.cpp  TurnRightCommand.cpp  TurnRightCommand.hpp
autonomous_car_v3/src/common/: DrivingMode.hpp
autonomous_car_v3/src/config/: ConfigurationManager.cpp  ConfigurationManager.hpp
autonomous_car_v3/src/controllers/: CommandDispatcher.cpp  CommandDispatcher.hpp  CommandRouter.cpp  CommandRouter.hpp  MotorController.cpp  MotorController.hpp  PidController.cpp  PidController.hpp  SteeringController.cpp  SteeringController.hpp
autonomous_car_v3/src/runtime/: ConfigPathResolver.cpp  ConfigPathResolver.hpp
autonomous_car_v3/src/services/: CameraService.cpp  CameraService.hpp  RoadSegmentationService.cpp  RoadSegmentationService.hpp  WebSocketServer.cpp  WebSocketServer.hpp
autonomous_car_v3/tests/: AutonomousControlServiceTests.cpp  AutonomousControlTelemetryTests.cpp  CommandRouterTests.cpp  LatestValueMailboxTests.cpp  RoadSegmentationServiceTests.cpp  RoadSegmentationServiceTrafficSignIntegrationTests.cpp  RoadSegmentationTelemetryTests.cpp  TestMain.cpp  TestRegistry.hpp  TrafficSignConfigTests.cpp  TrafficSignDebugRendererTests.cpp  TrafficSignDetectionTests.cpp  TrafficSignMailboxTests.cpp  TrafficSignRuntimeTests.cpp  TrafficSignTelemetryTests.cpp  TrafficSignTemporalFilterTests.cpp  TrafficSignTypesTests.cpp  TrafficSignalRegistryTests.cpp  VisionDebugStreamTests.cpp  VisionDebugViewRendererTests.cpp  VisionRuntimeConfigTests.cpp  VisionRuntimeTelemetryTests.cpp  WebSocketProtocolTests.cpp  WebSocketServerTests.cpp
road_segmentation_lab/: CMakeLists.txt  README.md  build.sh  run.sh
road_segmentation_lab/config/: road_segmentation_lab.env
road_segmentation_lab/src/: main.cpp
road_segmentation_lab/src/config/: LabConfig.cpp  LabConfig.hpp
road_segmentation_lab/src/pipeline/: BoundaryAnalyzer.cpp  RoadSegmentationPipeline.cpp  RoadSegmentationResult.hpp
road_segmentation_lab/src/render/: DebugRenderer.cpp  DebugRenderer.hpp
road_segmentation_lab/tests/: RoadSegmentationPipelineTests.cpp
shared/road_segmentation/: CMakeLists.txt
traffic_sign_service/: CMakeLists.txt  README.md  bootstrap_ubuntu.sh  build.sh  build_linux_eim.sh  start.sh
traffic_sign_service/config/: service.env
traffic_sign_service/src/: main.cpp
traffic_sign_service/src/app/: TrafficSignService.cpp  TrafficSignService.hpp
traffic_sign_service/src/concurrency/: LatestFrameStore.hpp
traffic_sign_service/src/config/: ServiceConfig.cpp  ServiceConfig.hpp
traffic_sign_service/src/domain/: ITrafficSignClassifier.hpp  SignalDetection.hpp  TrafficSignTypes.cpp  TrafficSignTypes.hpp  TrafficSignal.cpp  TrafficSignal.hpp
traffic_sign_service/src/edge_impulse/: EdgeImpulseClassifier.cpp  EdgeImpulseClassifier.hpp  EimProcessClassifier.cpp  EimProcessClassifier.hpp  ImageSignalEncoder.cpp  ImageSignalEncoder.hpp  LabelMapping.cpp  LabelMapping.hpp
traffic_sign_service/src/frame_source/: IFrameSource.hpp  LocalFrameSource.cpp  LocalFrameSource.hpp  WebSocketFrameSource.cpp  WebSocketFrameSource.hpp
traffic_sign_service/src/policy/: DetectionPolicy.cpp  DetectionPolicy.hpp  TrafficSignTemporalFilter.cpp  TrafficSignTemporalFilter.hpp
traffic_sign_service/src/telemetry/: TrafficSignTelemetry.cpp  TrafficSignTelemetry.hpp
traffic_sign_service/src/transport/: IMessagePublisher.hpp  IVehicleTransport.hpp  VehicleWebSocketClient.cpp  VehicleWebSocketClient.hpp
traffic_sign_service/src/vision/: Base64.cpp  Base64.hpp  FrameDecoder.cpp  FrameDecoder.hpp  VisionFrame.cpp  VisionFrame.hpp
traffic_sign_service/src/visualization/: FramePreviewWindow.cpp  FramePreviewWindow.hpp  TrafficSignDebugRenderer.cpp  TrafficSignDebugRenderer.hpp
traffic_sign_service/tests/: DetectionPolicyTests.cpp  EimProcessClassifierTests.cpp  ImageSignalEncoderTests.cpp  LabelMappingTests.cpp  LatestFrameStoreTests.cpp  ServiceConfigTests.cpp  TestMain.cpp  TestRegistry.hpp  TrafficSignServiceTests.cpp  TrafficSignTelemetryTests.cpp  TrafficSignTemporalFilterTests.cpp  TrafficSignTypesTests.cpp  VisionFrameParserTests.cpp  WebSocketFrameSourceTests.cpp
(+173 files in other folders)
